--- a/Engine.vcxproj.filters
+++ b/Engine.vcxproj.filters
@@ -112,5 +112,14 @@
     <None Include="WorkingDir\shaders.glsl">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="WorkingDir\FB_TO_QUAD.glsl">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="WorkingDir\RENDER_TO_BB.glsl">
+      <Filter>Shaders</Filter>
+    </None>
+    <None Include="WorkingDir\RENDER_TO_FB.glsl">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
