--- a/Engine.vcxproj
+++ b/Engine.vcxproj
@@ -52,6 +52,9 @@
     <ClInclude Include="ThirdParty\stb\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="WorkingDir\FB_TO_QUAD.glsl" />
+    <None Include="WorkingDir\RENDER_TO_BB.glsl" />
+    <None Include="WorkingDir\RENDER_TO_FB.glsl" />
     <None Include="WorkingDir\shaders.glsl" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
