Up to date, although not yet

--- a/Engine.vcxproj.filters
+++ b/Engine.vcxproj.filters
@@ -121,5 +121,8 @@
     <None Include="WorkingDir\RENDER_TO_FB.glsl">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="WorkingDir\base_model.glsl">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
