--- a/WorkingDir/imgui.ini
+++ b/WorkingDir/imgui.ini
@@ -4,9 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][Info]
-ViewportPos=1435,296
+ViewportPos=1198,-5
 ViewportId=0x6BBB9E69
-Size=415,480
+Size=404,907
 Collapsed=0
 
 [Docking][Data]
