--- a/WorkingDir/imgui.ini
+++ b/WorkingDir/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Info]
-ViewportPos=1198,-5
+ViewportPos=1149,116
 ViewportId=0x6BBB9E69
 Size=404,907
 Collapsed=0
