--- a/WorkingDir/imgui.ini
+++ b/WorkingDir/imgui.ini
@@ -4,10 +4,19 @@ Size=400,400
 Collapsed=0
 
 [Window][Info]
-ViewportPos=1230,9
-ViewportId=0x6BBB9E69
+ViewportPos=950,82
+ViewportId=0xA4D966FE
 Size=404,907
 Collapsed=0
+DockId=0x00000001,0
+
+[Window][Lights]
+ViewportPos=950,82
+ViewportId=0xA4D966FE
+Size=404,907
+Collapsed=0
+DockId=0x00000001,1
 
 [Docking][Data]
+DockNode  ID=0x00000001 Pos=950,82 Size=404,907 Selected=0x6BBB9E69
 
