--- a/Engine.vcxproj.filters
+++ b/Engine.vcxproj.filters
@@ -124,5 +124,8 @@
     <None Include="WorkingDir\base_model.glsl">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="WorkingDir\FB_TO_BB.glsl">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
